--- a/package.json
+++ b/package.json
@@ -11,43 +11,45 @@
   "dependencies": {
     "@devvie/bottom-sheet": "^0.2.1",
     "@expo/vector-icons": "^14.0.0",
-    "@expo/webpack-config": "~19.0.1",
-    "@react-native-community/masked-view": "^0.1.11",
+    "@expo/webpack-config": "^19.0.1",
+    "@react-native-firebase/app": "^20.0.0",
     "@react-navigation/elements": "^1.3.21",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "expo": "^50.0.6",
-    "expo-camera": "~14.0.4",
-    "expo-contacts": "~12.8.2",
-    "expo-device": "~5.9.3",
-    "expo-document-picker": "~11.10.1",
-    "expo-file-system": "~16.0.5",
-    "expo-image-manipulator": "~11.8.0",
-    "expo-image-picker": "~14.7.1",
-    "expo-intent-launcher": "~10.11.0",
-    "expo-location": "~16.5.3",
-    "expo-media-library": "~15.9.1",
-    "expo-secure-store": "~12.8.1",
-    "expo-sharing": "~11.10.0",
-    "expo-status-bar": "~1.11.1",
-    "expo-web-browser": "~12.8.2",
+    "expo": "^51.0.9",
+    "expo-camera": "~15.0.10",
+    "expo-constants": "~16.0.2",
+    "expo-contacts": "~13.0.3",
+    "expo-device": "~6.0.2",
+    "expo-document-picker": "~12.0.1",
+    "expo-file-system": "~17.0.1",
+    "expo-image-manipulator": "~12.0.5",
+    "expo-image-picker": "~15.0.5",
+    "expo-intent-launcher": "~11.0.1",
+    "expo-location": "~17.0.1",
+    "expo-media-library": "~16.0.3",
+    "expo-notifications": "~0.28.5",
+    "expo-secure-store": "~13.0.1",
+    "expo-sharing": "~12.0.1",
+    "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "~13.0.3",
     "formik": "^2.4.5",
     "node-forge": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.74.1",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-get-random-values": "~1.8.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-intent-launcher": "^0.2.1",
-    "react-native-maps": "^1.10.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-maps": "1.14.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.6.4",
+    "react-native-webview": "13.8.6",
     "socket.io-client": "^4.7.4",
     "uuid": "^9.0.1",
     "yup": "^1.3.3"
